# ros-nav2-simulation

neo_local_planner2/: CMakeLists.txt  neo_local_planner2_plugin.xml  package.xml
neo_local_planner2/include/: NeoLocalPlanner.hpp
neo_local_planner2/src/: NeoLocalPlanner.cpp
neo_localization2/: package.xml
neo_localization2/src/: neo_localization_node.cpp
neo_simulation2/: package.xml
neo_simulation2/configs/mpo_500/: navigation.yaml
neo_simulation2/launch/: navigation.launch.py  simulation.launch.py
neo_simulation2/maps/: my_map.pgm  my_map.yaml
neo_simulation2/robots/mpo_500/: mpo_500.urdf
neo_simulation2/worlds/: neo_track1.world
