<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>neo_local_planner2</name>
    <version>1.0.0</version>
    <description>
        Emprical local planner based on pure-pursuit
    </description>
    <maintainer email="ros@neobotix.de">Neobotix GmbH</maintainer>
    <maintainer email="padmanabhan@neobotix.de">Pradheep Padmanabhan</maintainer>
    <license>BSD</license>
    <url>http://wiki.ros.org/base_local_planner</url>

    <buildtool_depend>ament_cmake</buildtool_depend>
  
    <depend>costmap_converter</depend>
    <depend>costmap_converter_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav2_core</depend>
    <depend>nav2_costmap_2d</depend>
    <depend>nav2_msgs</depend>
    <depend>nav2_util</depend>
    <depend>pluginlib</depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_eigen</depend>
    <depend>visualization_msgs</depend>
    <export>
        <build_type>ament_cmake</build_type>
        <nav2_core plugin="${prefix}/neo_local_planner_plugin.xml" />
    </export>

</package>


